--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,14 @@
 @import '_variables.scss';
 @import '_mixins.scss';
+@import 'blocks/promo';
+@import 'blocks/header';
 
 html {
     font-family: 'Museo Sans Cyrl';
     font-weight: 300;
+}
+
+.container {
+    max-width: 950px;
+    margin: 0 auto;
 }
