--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,4 +1,44 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    &__logo {
+        width: 250px;
+        
+        img {
+            width: 100%;
+        }
+    }
+
+    &__offical {
+        font-weight: 500;
+        font-size: 12px;
+        text-align: center;
+        color: #FFFFFF;
+
+        span {
+            display: block;
+            font-size: 18px;
+        }
+    }
+
+    &__phone {
+        font-weight: bold;
+        font-size: 18px;
+        color: #FFFFFF;
+        display: block;
+        text-decoration: none;
+
+        &:hover {
+            color: #FFFFFF;
+            text-decoration: none;
+        }
+    }
+
+    &__contacts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
 }
