--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,64 @@
  .promo {
      min-height: 650px;
      padding: 21px 0 93px 0;
-     background: url(../../img/background.png) center (center/cover) no-repeat;
-     background-color: red;
+     background: url(../../img/bg.png) center (center/cover) no-repeat;
 
+     &__wrapper {
+         display: flex;
+         flex-direction: column;
+         align-items: flex-end;
+         margin-top: 90px;
+     }
+
+     &__header {
+        font-weight: bold;
+        font-size: 42px;
+        line-height: 42px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+     }
+
+     &__subheader {
+         margin-top: 17px;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 24px; 
+        text-transform: uppercase;
+        color: #FFFFFF;
+     }
+
+     &__icons {
+         margin-top: 65px;
+         width: 425px;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+     }
+
+     &__icon {
+         width: 108px;
+         text-align: center;
+         font-weight: 500;
+         font-size: 14px;
+         color: #FFFFFF;
+
+         img {
+             display: block;
+             margin: 0 auto;
+             margin-bottom: 20px ;
+         }
+     }
+
+     &__link {
+         margin-top: 18px;
+        font-weight: 500;
+        font-size: 16px;
+        color: #FFFFFF;
+
+        a {
+            color: #FFFFFF;
+            text-transform: uppercase;
+            text-decoration: underline;
+        }
+     }
  }
