Finished with forms.

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -15,4 +15,10 @@
         font-size: 16px;
         margin-top: 67px;
     }
+
+    &--submit {
+        width: 100%;
+        font-weight: 500;
+        height: 55px;
+    }
 }
