--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,15 @@
 @import '_buttons.scss';
 @import 'blocks/promo';
 @import 'blocks/header';
+@import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import '_media.scss';
+
+* {
+    margin: 0;
+    padding: 0;
+}
 
 html {
     font-family: 'Museo Sans Cyrl';
@@ -12,4 +21,19 @@ html {
 .container {
     max-width: 950px;
     margin: 0 auto;
+}
+
+.title {
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #0D0D0D;
+
+    &--left {
+        font-weight: bold;
+        font-size: 36px;
+        color: $white;
+        text-align: left;
+    }
 }
