--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
 @import 'blocks/advantages';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
 @import '_media.scss';
 
 * {
