added section with pulsometers.

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -21,4 +21,10 @@
         font-weight: 500;
         height: 55px;
     }
+
+    &--mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
+    }
 }
