added feedback section.

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -64,4 +64,19 @@
             }
         }
     }
+
+    .feedback {
+        &__item {
+            flex-direction: column;
+        }
+
+        &__block {
+            padding: 10px 20px 0 20px;
+            text-align: center;
+        }
+
+        &__img {
+            padding: 0 20px 10px 20px;
+        }
+    }
 }
