--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/feedback';
 @import '_media.scss';
 
 * {
