--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,9 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/feedback';
+@import 'blocks/footer';
+@import 'blocks/modals';
+@import 'blocks/page-up';
 @import '_media.scss';
 
 * {
