--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'blocks/modals';
 @import 'blocks/page-up';
 @import '_media.scss';
+@import '_animations.scss';
 
 * {
     margin: 0;
@@ -42,4 +43,8 @@ html {
         color: $white;
         text-align: left;
     }
+}
+
+.animate__fadeInUp {
+    animation-duration: 2s;
 }
